# silent-activity-pub

./: .gitmodules  Cargo.toml  PLAN.md  README.md  TODO.md
config/: app.example.toml
scripts/: verify_mvp.sh
src/: main.rs
src/activity/: inbox.rs  mod.rs  models.rs  outbox.rs
src/auth/: http_sign.rs  ld_sign.rs  mod.rs
src/config/: mod.rs
src/federation/: delivery.rs  discovery.rs  mod.rs  queue.rs  routes.rs
src/observability/: metrics.rs  mod.rs
src/store/: media.rs  mod.rs  object.rs
src/types/: mod.rs
src/utils/: dedup.rs  http.rs  mod.rs
