[package]
name = "silent-activity-pub"
version = "0.1.0"
edition = "2021"

[dependencies]
silent = { path = "./silent/silent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# scru128 暂不在 MVP 接口中直接生成，保留依赖以便后续使用
scru128 = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
silent-openapi = { path = "./silent/silent-openapi" }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
http = "1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
prometheus = "0.13"
once_cell = "1.19"
lru = "0.12"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
